err/gff-toolkit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gff_toolkit'...
Compiling './lib/python3.5/site-packages/gff_toolkit/gff.py'...
***   File "./lib/python3.5/site-packages/gff_toolkit/gff.py", line 316
    print type(key),key
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gff_toolkit/gffsubpart.py'...
***   File "./lib/python3.5/site-packages/gff_toolkit/gffsubpart.py", line 74
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gff_toolkit/parser.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (parser.py, line 41)
Listing './lib/python3.5/site-packages/gff_toolkit-0.1.12.egg-info'...
Listing './lib/python3.5/site-packages/intervaltree'...
Listing './lib/python3.5/site-packages/intervaltree-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sortedcontainers'...
Listing './lib/python3.5/site-packages/sortedcontainers-1.5.9.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
